--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "next": "^14.0.3",
